--- a/app/src/main/res/layout/activity_count.xml
+++ b/app/src/main/res/layout/activity_count.xml
@@ -43,4 +43,14 @@
         android:layout_above="@+id/count_to_display"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:id="@+id/count_hash_to_display"
+        android:text="/anothercount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp" />
+
 </RelativeLayout>
